deploy rss feed post.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 <ul id="posts">
 
     <li>
+        <a href="https://pequalsnp.io/posts/rss-feed/">Rss Feed<small><time>Oct 5, 2020</time></small>
+        </a>
+    </li>
+
+    <li>
         <a href="https://pequalsnp.io/posts/bake-off/">Bake Off<small><time>Oct 4, 2020</time></small>
         </a>
     </li>
